<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.nn.jokeulator.view.MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:textSize="45sp"
            android:text="@string/app_name" />

        <LinearLayout
            android:id="@+id/joke_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/first_joke_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:onClick="startActivityFirstButton"
                android:text="@string/first_joke_button" />

            <Button
                android:id="@+id/second_joke_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:onClick="startActivitySecondButton"
                android:text="@string/second_joke_button" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>